<resources>
    <string name="app_name">SkyNav</string>
    <string name="nombre">Nombre</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenha">Contraseña</string>
    <string name="inicio_sesi_n">Iniciar</string>
    <string name="volver">Volver</string>
    <string name="crear">Crear</string>
    <string name="finalizar">Finalizar</string>
    <string name="contenidoPrincipal">Muevete Volando</string>
    <string name="txtInicio_Sesion">Inicio Sesión</string>
    <string name="txt_crear_sesi_n">Crear Sesión</string>
    <string name="txt_muevete_volando">Muevete Volando</string>
    <string name="origen">Origen</string>
    <string name="destino">Destino</string>
    <string name="adulto_1">Adulto 1</string>
    <string name="nombre_et">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="datos_de_contacto">Datos de contacto</string>
    <string name="pa_s">País</string>
    <string name="prefijo">Prefijo</string>
    <string name="m_vil">Móvil</string>
    <string name="guardar_datos">Guardar datos</string>
    <string name="fecha">Fecha</string>
    <string name="clase">Clase</string>
    <string name="premium">Premium</string>
    <string name="cl_sica">Clásica</string>
    <string name="n_mero_de_pasajeros">Número de pasajeros</string>
    <string name="precio">Precio</string>
    <string name="comprar">Comprar</string>
    <string name="fecha_de_vuelo">Fecha de Vuelo</string>
    <string name="confirmar">Confirmar</string>
    <string name="datos_de_tarjeta">Datos de Tarjeta</string>
    <string name="nombre_en_la_tarjeta">Nombre en la tarjeta</string>
    <string name="n_mero_de_tarjeta">Número de tarjeta</string>
    <string name="fecha_de_vencimiento">Fecha de vencimiento</string>
    <string name="c_digo_de_seguridad_ccv">Código de seguridad(CCV)</string>
    <string name="guardar_tarjeta_para_futuras_compras">Guardar tarjeta para futuras compras</string>
    <string name="compra_de_viajes">Compra de Viajes</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="telefono">Telefono</string>
    <string name="edad">Edad</string>
    <string name="actualizar">Actualizar</string>
</resources>