<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@color/black">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_main4">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/usuario"
            android:layout_marginRight="@dimen/margin_Right_img_main_4"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adulto_1"
            android:textColor="@color/white"></TextView>
    </LinearLayout>
    <EditText
        android:id="@+id/etNombreAdulto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alto_edit_text"
        android:hint="@string/nombre_et"
        android:inputType="textCapWords"
        android:textColor="@color/white"
        android:textColorHint="@color/white"></EditText>
    <EditText
        android:id="@+id/etApellidoAdulto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alto_edit_text"
        android:hint="@string/apellidos"
        android:inputType="textCapWords"
        android:textColor="@color/white"
        android:textColorHint="@color/white"></EditText>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="@dimen/alto_linea_separatoria"
           android:background="@color/color_linea"></LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cuaderno"
            android:layout_marginRight="@dimen/marginRight_img"
            ></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datos_de_contacto"
            android:textColor="@color/white"
            ></TextView>
    </LinearLayout>
    <EditText
        android:id="@+id/etNombreContacto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alto_edit_text"
        android:hint="@string/nombre_et"
        android:inputType="textCapWords"
        android:textColor="@color/white"
        android:textColorHint="@color/white"></EditText>
    <EditText
        android:id="@+id/etApellidoContacto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alto_edit_text"
        android:hint="@string/apellidos"
        android:inputType="textCapWords"
        android:textColor="@color/white"
        android:textColorHint="@color/white"></EditText>

        <AutoCompleteTextView
            android:id="@+id/Pais"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alto_edit_text"
            android:hint="@string/pa_s"
            android:inputType="textCapCharacters"
            android:textColor="@color/white"
            android:textColorHint="@color/white"></AutoCompleteTextView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/prefijo"
            android:layout_width="@dimen/prefijo_ancho"
            android:layout_height="@dimen/alto_edit_text"
            android:hint="@string/prefijo"
            android:inputType="phone"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:maxLength="3"></EditText>
        <EditText
            android:id="@+id/movil"
            android:layout_width="@dimen/ancho_movil"
            android:layout_height="@dimen/alto_edit_text"
            android:hint="@string/m_vil"
            android:inputType="phone"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:maxLength="9"></EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar_datos"
            android:textColor="@color/white"></TextView>
        <CheckBox
            android:id="@+id/chkGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></CheckBox>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/alto_linea_separatoria"
            android:background="@color/color_linea"></LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:textColor="@color/white"></TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="@dimen/ancho_alto_boton"
                android:layout_height="@dimen/ancho_alto_boton"
                android:drawableBottom="@drawable/calendario"
                android:onClick="onClickCalendario"
                ></Button>
            <TextView
                android:id="@+id/txtFecha"
                android:layout_marginLeft="@dimen/margin_left_fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"></TextView>
        </LinearLayout>

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clase"
        android:textColor="@color/white"></TextView>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/rbPremium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/premium"
            android:textColor="@color/white"></RadioButton>
        <RadioButton
            android:id="@+id/rbClasica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cl_sica"
            android:textColor="@color/white"
            android:checked="true"></RadioButton>

    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_mero_de_pasajeros"
        android:textColor="@color/white"></TextView>
    <Spinner
        android:id="@+id/spPasajeros"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/alto_spinner_personas"
        ></Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/alto_linea_separatoria"
            android:background="@color/color_linea"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
            <TextView
                android:id="@+id/Precio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precio"
                android:textSize="@dimen/tamañoInicio"
                android:textColor="@color/white"
                android:layout_marginRight="@dimen/marginRight_precio"></TextView>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comprar"
                android:onClick="onClickComprar"></Button>

        </LinearLayout>
        <Button
            android:layout_margin="@dimen/margin_volver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volver"
            android:onClick="onClickVolver"></Button>

    </LinearLayout>


    </LinearLayout>
    </ScrollView>

</LinearLayout>