<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/margin_main_6"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tarjeta"></ImageView>

        <TextView
            android:layout_marginLeft="@dimen/marginleft_txt_main_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datos_de_tarjeta"
            android:textColor="@color/white"
            android:textSize="@dimen/tamaño_txt_main_6"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/margin_main_6_2"
        android:orientation="vertical">
        <EditText
            android:id="@+id/etNombreTarjeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_en_la_tarjeta"
            android:textColorHint="@color/white"
            android:inputType="textCapSentences"
            android:textColor="@color/white"
            ></EditText>
        <EditText
            android:id="@+id/etNumeroTarjeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/n_mero_de_tarjeta"
            android:textColorHint="@color/white"
            android:inputType="numberSigned"
            android:maxLength="18"
            android:textColor="@color/white"
            ></EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_main_6_2"
        android:orientation="vertical">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/fecha_de_vencimiento"
           android:textColor="@color/white"
           android:textSize="@dimen/tamaño_txt_main_6"></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Spinner
            android:id="@+id/spMes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginleft_sp_main_6"
            android:layout_marginTop="@dimen/margin_top_sp_main_6"
            android:entries="@array/mes"
            android:spinnerMode="dropdown"
            android:spinnerItemStyle="@style/mySpinnerItemStyle" ></Spinner>
            <Spinner
                android:id="@+id/spAño"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left_2_sp_main_6"
                android:layout_marginTop="@dimen/margin_top_sp_main_6"
                android:entries="@array/ano"
                android:spinnerMode="dropdown"
                android:spinnerItemStyle="@style/mySpinnerItemStyle"></Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/etCCV"
                android:layout_marginTop="@dimen/margin_top_ccv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/c_digo_de_seguridad_ccv"
                android:textColorHint="@color/white"
                android:maxLength="3"
                android:textColor="@color/white"
                ></EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <CheckBox
                android:id="@+id/chkGuardarTarjeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></CheckBox>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar_tarjeta_para_futuras_compras"
                android:textColor="@color/white"></TextView>

        </LinearLayout>

        <Button
            android:layout_marginTop="@dimen/margintop_btn_main_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comprar"
            android:onClick="onClickComprar"></Button>
    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>