<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvTitulo"
        android:textStyle="bold"
        android:textSize="@dimen/tamaño_txt_main_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"></TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/origen"
            android:layout_gravity="center"
           ></TextView>

        <Spinner
            android:id="@+id/spOrigen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginLeft="@dimen/txt_margin_left_destino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destino"
                android:layout_gravity="center"
                ></TextView>
        <Spinner
            android:id="@+id/spDestino"
           android:layout_marginLeft="@dimen/sp_marginleft_destino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Spinner>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/lvVehiculos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/black"
            android:dividerHeight="@dimen/dividerHeight">
        </ListView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volver"
            android:onClick="OnclickVolver">
        </Button>

    </LinearLayout>


</LinearLayout>